--- a/index.html
+++ b/index.html
@@ -99,14 +99,15 @@
                                     <i class="fas fa-users selector-icon" aria-hidden="true"></i>
                                     <div class="selector-trigger-text">
                                         <span class="selector-trigger-label">Perfil geral</span>
+                                        <span class="selector-trigger-description">Visão consolidada do atendimento</span>
                                     </div>
                                     <span class="selector-arrow" aria-hidden="true"><i class="fas fa-angle-down"></i></span>
                                 </button>
                                 <div class="selector-dropdown" role="listbox" aria-labelledby="profile-select-trigger"></div>
                                 <select id="profile-select" class="selector-input" aria-hidden="true" tabindex="-1">
-                                    <option value="geral" selected data-icon="fas fa-chart-line">Perfil geral</option>
-                                    <option value="visitante" data-icon="fas fa-id-badge">Visitantes</option>
-                                    <option value="acompanhante" data-icon="fas fa-people-roof">Acompanhantes</option>
+                                    <option value="geral" selected data-icon="fas fa-chart-line" data-description="Visão consolidada do atendimento">Perfil geral</option>
+                                    <option value="visitante" data-icon="fas fa-id-badge" data-description="Gestão completa dos visitantes">Visitantes</option>
+                                    <option value="acompanhante" data-icon="fas fa-people-roof" data-description="Acompanhamento dedicado aos pacientes">Acompanhantes</option>
                                 </select>
                             </div>
                             <div class="selector-group compact">
@@ -116,17 +117,25 @@
                                         <i class="fas fa-building selector-icon" aria-hidden="true"></i>
                                         <div class="selector-trigger-text">
                                             <span class="selector-trigger-label">Todas as unidades</span>
+                                            <span class="selector-trigger-description">Visualização geral por setor</span>
                                         </div>
                                         <span class="selector-arrow" aria-hidden="true"><i class="fas fa-angle-down"></i></span>
                                     </button>
                                     <div class="selector-dropdown" role="listbox" aria-labelledby="unit-select-trigger"></div>
                                     <select id="unit-select" class="selector-input" aria-hidden="true" tabindex="-1">
-                                        <option value="todas" data-icon="fas fa-layer-group">Todas as unidades</option>
+                                        <option value="todas" data-icon="fas fa-layer-group" data-description="Visualização geral por setor">Todas as unidades</option>
                                     </select>
                                 </div>
                             </div>
                         </div>
                         <div class="header-icon-actions">
+                            <button type="button" class="theme-toggle" id="theme-toggle" aria-label="Ativar tema escuro" aria-pressed="false">
+                                <i class="fas fa-moon" aria-hidden="true"></i>
+                            </button>
+                            <div class="notification-bell" id="notification-bell" aria-label="Notificações" tabindex="0">
+                                <i class="fas fa-bell" aria-hidden="true"></i>
+                                <span class="notification-badge">0</span>
+                            </div>
                             <div class="user-profile" id="header-user-profile" role="button" tabindex="0" aria-haspopup="dialog" aria-controls="avatar-modal" aria-expanded="false">
                                 <div class="user-avatar" id="header-user-avatar">--</div>
                                 <div class="user-details" aria-hidden="true">
@@ -1338,34 +1347,20 @@
     <div class="avatar-modal-backdrop hidden" id="avatar-modal-backdrop" aria-hidden="true">
         <div class="avatar-modal hidden" id="avatar-modal" role="dialog" aria-modal="true" aria-labelledby="avatar-modal-title">
             <div class="avatar-modal-header">
-                <h3 class="avatar-modal-title" id="avatar-modal-title">Perfil</h3>
+                <h3 class="avatar-modal-title" id="avatar-modal-title">Escolher avatar</h3>
                 <button type="button" class="avatar-modal-close" id="avatar-modal-close" aria-label="Fechar seleção de avatar">
                     <i class="fas fa-times"></i>
                 </button>
             </div>
-            <div class="profile-modal-card">
-                <div class="profile-modal-avatar" id="profile-modal-avatar">--</div>
-                <div class="profile-modal-info">
-                    <strong id="profile-modal-name">Usuário</strong>
-                    <span id="profile-modal-role">Perfil geral</span>
+            <p class="avatar-modal-description">Selecione uma imagem abaixo ou informe a URL de uma foto para personalizar seu perfil.</p>
+            <div class="avatar-grid" id="avatar-options" role="listbox" aria-label="Avatares sugeridos"></div>
+            <div class="avatar-custom">
+                <label for="avatar-url">Usar URL personalizada</label>
+                <div class="avatar-custom-control">
+                    <input type="url" id="avatar-url" name="avatar-url" placeholder="https://exemplo.com/minha-foto.jpg" autocomplete="off">
+                    <button type="button" class="avatar-apply-button" id="avatar-url-apply">Aplicar</button>
                 </div>
             </div>
-            <div class="profile-modal-actions">
-                <button type="button" class="profile-action-button" id="profile-notification-toggle" aria-expanded="false">
-                    <span>
-                        <i class="fas fa-bell" aria-hidden="true"></i>
-                        Notificações
-                    </span>
-                    <span class="notification-badge">0</span>
-                </button>
-                <button type="button" class="profile-action-button profile-action-button--theme" id="theme-toggle" aria-label="Ativar tema escuro" aria-pressed="false">
-                    <span>
-                        <i class="fas fa-moon" aria-hidden="true"></i>
-                        Tema
-                    </span>
-                </button>
-            </div>
-            <div class="avatar-grid" id="avatar-options" role="listbox" aria-label="Avatares sugeridos"></div>
         </div>
     </div>
     <div class="global-loading-overlay" id="global-loading-overlay" role="status" aria-live="assertive" aria-hidden="true">
