--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jspdf@2.5.1/dist/jspdf.umd.min.js"></script>
-    <?!= include('style'); ?>
+    <?!= include('style.html'); ?>
 
 </head>
 <body>
@@ -99,15 +99,14 @@
                                     <i class="fas fa-users selector-icon" aria-hidden="true"></i>
                                     <div class="selector-trigger-text">
                                         <span class="selector-trigger-label">Perfil geral</span>
-                                        <span class="selector-trigger-description">Visão consolidada do atendimento</span>
                                     </div>
                                     <span class="selector-arrow" aria-hidden="true"><i class="fas fa-angle-down"></i></span>
                                 </button>
                                 <div class="selector-dropdown" role="listbox" aria-labelledby="profile-select-trigger"></div>
                                 <select id="profile-select" class="selector-input" aria-hidden="true" tabindex="-1">
-                                    <option value="geral" selected data-icon="fas fa-chart-line" data-description="Visão consolidada do atendimento">Perfil geral</option>
-                                    <option value="visitante" data-icon="fas fa-id-badge" data-description="Gestão completa dos visitantes">Visitantes</option>
-                                    <option value="acompanhante" data-icon="fas fa-people-roof" data-description="Acompanhamento dedicado aos pacientes">Acompanhantes</option>
+                                    <option value="geral" selected data-icon="fas fa-chart-line">Perfil geral</option>
+                                    <option value="visitante" data-icon="fas fa-id-badge">Visitantes</option>
+                                    <option value="acompanhante" data-icon="fas fa-people-roof">Acompanhantes</option>
                                 </select>
                             </div>
                             <div class="selector-group compact">
@@ -117,21 +116,17 @@
                                         <i class="fas fa-building selector-icon" aria-hidden="true"></i>
                                         <div class="selector-trigger-text">
                                             <span class="selector-trigger-label">Todas as unidades</span>
-                                            <span class="selector-trigger-description">Visualização geral por setor</span>
                                         </div>
                                         <span class="selector-arrow" aria-hidden="true"><i class="fas fa-angle-down"></i></span>
                                     </button>
                                     <div class="selector-dropdown" role="listbox" aria-labelledby="unit-select-trigger"></div>
                                     <select id="unit-select" class="selector-input" aria-hidden="true" tabindex="-1">
-                                        <option value="todas" data-icon="fas fa-layer-group" data-description="Visualização geral por setor">Todas as unidades</option>
+                                        <option value="todas" data-icon="fas fa-layer-group">Todas as unidades</option>
                                     </select>
                                 </div>
                             </div>
                         </div>
                         <div class="header-icon-actions">
-                            <button type="button" class="theme-toggle" id="theme-toggle" aria-label="Ativar tema escuro" aria-pressed="false">
-                                <i class="fas fa-moon" aria-hidden="true"></i>
-                            </button>
                             <div class="notification-bell" id="notification-bell" aria-label="Notificações" tabindex="0">
                                 <i class="fas fa-bell" aria-hidden="true"></i>
                                 <span class="notification-badge">0</span>
@@ -1307,58 +1302,59 @@
             </div>
         </div>
     </div>
-    <!-- Painel de Notificações -->
-    <div class="notification-panel" id="notification-panel" aria-hidden="true">
-        <div class="notification-header">
-            Notificações
-        </div>
-        <div class="notification-list">
-            <div class="notification-item">
-                <div class="notification-icon danger">
-                    <i class="fas fa-exclamation"></i>
-                </div>
-                <div class="notification-content">
-                    <div class="notification-title">Armário V-15 vencido</div>
-                    <div class="notification-time">Há 5 minutos</div>
-                </div>
-            </div>
-            <div class="notification-item">
-                <div class="notification-icon danger">
-                    <i class="fas fa-exclamation"></i>
-                </div>
-                <div class="notification-content">
-                    <div class="notification-title">Armário V-32 vencido</div>
-                    <div class="notification-time">Há 12 minutos</div>
-                </div>
-            </div>
-            <div class="notification-item">
-                <div class="notification-icon warning">
-                    <i class="fas fa-clock"></i>
-                </div>
-                <div class="notification-content">
-                    <div class="notification-title">Armário A-07 próximo do horário</div>
-                    <div class="notification-time">Há 2 minutos</div>
-                </div>
-            </div>
-        </div>
-    </div>
     <!-- Área dedicada para a impressão do comprovante -->
     <div id="print-area" aria-hidden="true"></div>
     <div class="avatar-modal-backdrop hidden" id="avatar-modal-backdrop" aria-hidden="true">
-        <div class="avatar-modal hidden" id="avatar-modal" role="dialog" aria-modal="true" aria-labelledby="avatar-modal-title">
+        <div class="avatar-modal hidden" id="avatar-modal" role="dialog" aria-modal="true" aria-labelledby="profile-modal-title">
             <div class="avatar-modal-header">
-                <h3 class="avatar-modal-title" id="avatar-modal-title">Escolher avatar</h3>
-                <button type="button" class="avatar-modal-close" id="avatar-modal-close" aria-label="Fechar seleção de avatar">
+                <h3 class="avatar-modal-title" id="profile-modal-title">Painel do usuário</h3>
+                <button type="button" class="avatar-modal-close" id="avatar-modal-close" aria-label="Fechar painel do usuário">
                     <i class="fas fa-times"></i>
                 </button>
             </div>
-            <p class="avatar-modal-description">Selecione uma imagem abaixo ou informe a URL de uma foto para personalizar seu perfil.</p>
-            <div class="avatar-grid" id="avatar-options" role="listbox" aria-label="Avatares sugeridos"></div>
-            <div class="avatar-custom">
-                <label for="avatar-url">Usar URL personalizada</label>
-                <div class="avatar-custom-control">
-                    <input type="url" id="avatar-url" name="avatar-url" placeholder="https://exemplo.com/minha-foto.jpg" autocomplete="off">
-                    <button type="button" class="avatar-apply-button" id="avatar-url-apply">Aplicar</button>
+            <div class="profile-modal-hero">
+                <div class="profile-modal-avatar" id="profile-modal-avatar" aria-hidden="true">--</div>
+                <div class="profile-modal-info">
+                    <p class="profile-modal-name" id="profile-modal-name">Usuário</p>
+                    <p class="profile-modal-role" id="profile-modal-role">Perfil geral</p>
+                </div>
+            </div>
+            <div class="profile-modal-actions">
+                <button type="button" class="theme-toggle" id="theme-toggle" aria-label="Ativar tema escuro" aria-pressed="false">
+                    <i class="fas fa-moon" aria-hidden="true"></i>
+                    <span>Tema</span>
+                </button>
+            </div>
+            <div class="profile-modal-notifications">
+                <div class="profile-modal-section-title">Notificações</div>
+                <div class="notification-list" id="profile-notification-list">
+                    <div class="notification-item">
+                        <div class="notification-icon danger">
+                            <i class="fas fa-exclamation"></i>
+                        </div>
+                        <div class="notification-content">
+                            <div class="notification-title">Armário V-15 vencido</div>
+                            <div class="notification-time">Há 5 minutos</div>
+                        </div>
+                    </div>
+                    <div class="notification-item">
+                        <div class="notification-icon danger">
+                            <i class="fas fa-exclamation"></i>
+                        </div>
+                        <div class="notification-content">
+                            <div class="notification-title">Armário V-32 vencido</div>
+                            <div class="notification-time">Há 12 minutos</div>
+                        </div>
+                    </div>
+                    <div class="notification-item">
+                        <div class="notification-icon warning">
+                            <i class="fas fa-clock"></i>
+                        </div>
+                        <div class="notification-content">
+                            <div class="notification-title">Armário A-07 próximo do horário</div>
+                            <div class="notification-time">Há 2 minutos</div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -1369,7 +1365,7 @@
             <span id="global-loading-text">Processando...</span>
         </div>
     </div>
-    <?!= include('script'); ?>
+    <?!= include('script.html'); ?>
 
 </body>
 </html>
